[package]
name = "day5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[features]
dhat-heap = []

[[bench]]
name = "day5_bench"
path = "benches/benchmarks.rs"
harness = false